# LocusFocus

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  getSimpleSumStats.R  merge_and_convert_to_html_coloc2.py  numpy_encoder.py  pyproject.toml  requirements.txt  sample.env  wsgi.py
.github/workflows/: main.yml
app/: __init__.py  commands.py  config.py  routes.py  tasks.py  wsgi.py
app/coloc2/: optim_function.R
app/colocalization/: constants.py  payload.py  pipeline.py  plink.py  util.py  utils.py
app/colocalization/stages/: __init__.py  collect_user_input.py  coloc_simple_sum.py  create_session.py  finalize_results.py  get_gtex_data.py  get_ld_matrix.py  liftover_gwas_file.py  liftover_secondary_datasets.py  read_gwas_file.py  read_secondary_datasets.py  report_gtex_data.py  ss_subset_gwas.py
app/jobs/: __init__.py  routes.py
app/pipeline/: __init__.py  payload.py  pipeline.py  pipeline_stage.py
app/scripts/: __init__.py  getSimpleSumStats.R  run_coloc2.R
app/scripts/coloc2/: COLOC2_samplecode.R
app/static/css/: style.css
app/static/js/: app.js  first_stage_table.js  guidance_table.js  heatmap_table.js  params_table.js  plot_coloc.js  plot_gwas.js  plot_heatmap.js  set_based_test.js
app/static/session_data/: SSPvalues-example-output.json  coloc2result-example-output.json
app/templates/: index.html  invalid_input.html  plot.html  session_form.html  set_based_test.html  waiting_page.html
app/templates/components/: first-stage-significance-notice.html  navigation-bar.html  research-disclaimer.html  simplesum-notice.html
app/templates/lib/: google-analytics.html  jquery-core.html  jquery-ui.html
app/utils/: __init__.py  errors.py  gencode.py  gtex.py  helpers.py  liftover.py  smr.py  timing.py  util.py  variants.py
app/utils/apis/: ensembl.py  gtex.py
app/utils/gtex_db/: __init__.py  base.py  fake.py  null.py  real.py
coloc2/: functions_coloc_likelihood_summary_integrated2.R
data/sample_datasets/: MI_GWAS_2019_1_205500-206000kbp.tsv
datasets/1000Genomes_GRCh37/EUR/: EUR.txt  (+2 more)
docs/source/: conf.py  current_versions.rst  examples.rst  future.rst  gwas_svatalog.rst  help.rst  index.rst  license.rst  quick_start.rst  session_retrieval.rst  set_based_test.rst
flask/: .gitignore  .lintr  .readthedocs.yaml  Dockerfile  Dockerfile.prod  app.py  create-redis-conf.sh  data  pyproject.toml  requirements.txt  setup-locusfocus-user.sh
flask/app/: __init__.py  config.py  routes.py
flask/data/: hg38_chrom_lengths.txt
flask/misc/: hg38_chromlengths.py  initdb_GTEx_inchunks_signficant.py  test.py
misc/: initdb_GTExV10_inchunks.py  initdb_GTExV10_variant_table.py  initdb_GTExV8_inchunks.py  initdb_GTExV8_inchunks_signficant.py  initdb_GTEx_inchunks_signficant.py
next/: Dockerfile
next/locus-focus/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
setup/: setup-smr.sh
setup/celery/: start-celery.sh
static/js/: app.js  first_stage_table.js  heatmap_table.js  inputChecker.js  navigation-bar.js  params_table.js  plot_heatmap.js
static/session_data/: genes_data-3f41cea2-5843-4942-bba3-b28fa7e4b949.json  metadata-3f41cea2-5843-4942-bba3-b28fa7e4b949.json
templates/: cftr_graph.html  index.html  invalid_input.html  plot.html  session_form.html  set_based_test.html
templates/components/: myjumbotron.html  navigation-bar.html
tests/: conftest.py  fake_gtex.py  test_util.py
tests/api/: test_gene_lookup.py  test_gtex.py  test_gtex_api.py  test_gtex_mongo.py  test_gtex_regression.py
tests/pipeline/: test_liftover_stage.py
tests/utils/: test_gtex_helpers.py  test_helpers.py  test_liftover.py  test_query_smr.py  test_smr.py
(+75 files in other folders)
