[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.18.5"
flask = "2.2.5"
pandas = "1.0.5"
scipy = "1.5.0"
tqdm = "4.47.0"
bs4 = "0.0.1"
pysam = "0.16.0.1"
flask-pymongo = "2.3.0"
jinja2 = "3.1.3"
flask-sitemap = "0.4.0"
flask-talisman = "1.1.0"
flask-uploads = "0.2.1"
python-dotenv = "0.21.1"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
