[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Conor Klamann <conor.klamann@utoronto.ca>", "Mackenzie Frew <mackenzie.frew@sickkids.ca>", "Naim Panjwani <naim.panjwani@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.22.4"
flask = "2.2.5"
pandas = "2.1.0"
scipy = "1.8.0"
tqdm = "4.47.0"
bs4 = "0.0.1"
pysam = "0.22.0"
flask-pymongo = "2.3.0"
jinja2 = "3.1.3"
flask-sitemap = "0.4.0"
flask-talisman = "1.1.0"
flask-uploads = "0.2.1"
python-dotenv = "0.21.1"
requests = "2.31.0"
celery = "^5.4.0"
gunicorn = "^23.0.0"
redis = "^5.2.1"
gtex-openapi = { git = "https://github.com/ccmbioinfo/gtex-openapi", tag = "v1.0.1" }
flask-caching = "^2.3.1"
lxml = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"
black = "22.8.0"
debugpy = "^1.8.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
