[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [
    "Conor Klamann <conor.klamann@utoronto.ca>",
    "Mackenzie Frew <mackenzie.frew@sickkids.ca>",
    "Naim Panjwani <naim.panjwani@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.22.4"
flask = "2.2.5"
pandas = "2.1.0"
scipy = "1.8.0"
tqdm = "4.47.0"
bs4 = "0.0.1"
pysam = "0.22.0"
flask-pymongo = "2.3.0"
jinja2 = "3.1.3"
flask-sitemap = "0.4.0"
flask-talisman = "1.1.0"
flask-uploads = "0.2.1"
python-dotenv = "0.21.1"
requests = "2.31.0"
celery = "^5.4.0"
gunicorn = "^23.0.0"
redis = "^5.2.1"
gtex-openapi = { git = "https://github.com/ccmbioinfo/gtex-openapi", tag = "v1.0.2" }
flask-caching = "^2.3.1"
lxml = "^5.4.0"
pyopenssl = "^25.1.0"
polars = "^1.34.0"
pyarrow = "^21.0.0"
ipykernel = "^7.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.1"
debugpy = "^1.8.12"
ruff = "^0.11.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "venv",
    "**/test_init.py",
    "**/test.py",
    "**/test2.py",
    "**/data/**/*",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
